@@ -87,7 +87,7 @@ public final class DefaultResourceResolvers {
         protected String tryDecodeUri(String uri) {
             try {
                 // try to decode as the uri may contain %20 for spaces etc
-                uri = URLDecoder.decode(uri, StandardCharsets.UTF_8.name());
+                uri = URLDecoder.decode(uri, StandardCharsets.UTF_8);
             } catch (Exception e) {
                 getLogger().trace("Error URL decoding uri using UTF-8 encoding: {}. This exception is ignored.", uri);
                 // ignore
@@ -183,7 +183,7 @@ public final class DefaultResourceResolvers {
         protected String tryDecodeUri(String uri) {
             try {
                 // try to decode as the uri may contain %20 for spaces etc
-                uri = URLDecoder.decode(uri, StandardCharsets.UTF_8.name());
+                uri = URLDecoder.decode(uri, StandardCharsets.UTF_8);
             } catch (Exception e) {
                 getLogger().trace("Error URL decoding uri using UTF-8 encoding: {}. This exception is ignored.", uri);
                 // ignore
